# DoneXBlock

./: .coveragerc  .gitignore  .readthedocs.yaml  .readthedocs.yml  Dockerfile  MANIFEST.in  Makefile  NOTICE  README.md  README.rst  catalog-info.yaml  pylintrc  pyproject.toml  setup.py  test_settings.py  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql-analysis.yml  dependabot.yml  issue-metrics.yml  pypi-release.yml  release.yml  upgrade-python-requirements.yml
docs/source/: conf.py  index.rst
docs/source/concepts/: index.rst
docs/source/decisions/: 0000-purpose-of-this-repo.rst
docs/source/how-tos/: index.rst
docs/source/quickstarts/: index.rst
docs/source/references/: done.rst  index.rst
done/: __init__.py  done.py
done/static/css/: done.css
done/templates/: done.html
done/tests/: test_basic.py  test_basics.py  test_nothing.py  utils.py
requirements/: base.in  base.txt  ci.txt  constraints.txt  dev.txt  docs.in  docs.txt  pip.txt  pip_tools.txt  quality.in  quality.txt  test.in  test.txt  tox.txt
scripts/: install_and_run_xblock.sh
src/done/: __init__.py
src/done/templates/: studioview.html
src/done/tests/: __init__.py
