[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "done-xblock"
description = "done XBlock"
readme = "README.rst"
license = "AGPL-3.0"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12"
dynamic = ["version"]
dependencies = [
    "XBlock",
    "django>=4.2",
]

[project.urls]
Homepage = "https://github.com/openedx/DoneXBlock"

[project.entry-points."xblock.v1"]
done = "done:DoneXBlock"

[tool.setuptools_scm]
version_scheme = "only-version"
local_scheme = "no-local-version"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
done = ["static/**", "templates/**", "public/**"]

[tool.setuptools.exclude-package-data]
"*" = ["tests*", "*.tests*", "spec*", "*.spec*"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "DJ",     # flake8-django
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-third-party = ["django", "xblock"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.coverage.run]
branch = true
source = ["done"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
    "*/settings.py",
    "*/urls.py",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.semantic_release]
build_command = "pip install build && SETUPTOOLS_SCM_PRETEND_VERSION=$NEW_VERSION python -m build"

[tool.uv]
package = true
conflicts = [
    [{group = "test"}, {group = "django42"}],
]

# [tool.uv.constraint-dependencies] is machine-managed — do not edit directly.
# Run `make upgrade` to regenerate it via edx_lint write_uv_constraints.

[tool.edx_lint]
uv_constraints = []

[dependency-groups]
test-base = [
    "coverage",
    "coveralls",
    "ddt",
    "pytest",
    "twine",
    "xblock-sdk",
]
# Current default: Django 5.2. To add a new Django version, add a group below
# (e.g. django60) and add a matching tox env + uv conflict entry.
test = [
    {include-group = "test-base"},
    "Django>=5.2,<6.0",
]
django42 = [
    {include-group = "test-base"},
    "Django>=4.2,<5.0",
]
quality = [
    {include-group = "test"},
    "build",
    "edx-lint",
    "pylint",
    "pycodestyle",
    "ruff",
]
doc = [
    {include-group = "test"},
    "Sphinx",
    "sphinx-book-theme",
]
ci = [
    "tox",
    "tox-uv>=1",
]
dev = [
    {include-group = "quality"},
    {include-group = "ci"},
    {include-group = "doc"},
    "edx-i18n-tools",
]
